<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/lbl_image"
            android:textSize="15.5sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/lbl_prod_name"
            android:textSize="15.5sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/lbl_qtd"
            android:textSize="15.5sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/lbl_price"
            android:textSize="15.5sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gradient_divider" />

    <ListView
        android:id="@+id/listViewInventory"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>